<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CameraDemo</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create_new_album">CreateNewAlbum</string>
    <string name="albumLogicalName">album logiCal Name</string>
    <string name="subject">subject</string>
    <string name="userName">User Name</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_activiy">TestActiviy</string>
    <string name="title_activity_album_single_page">AlbumSinglePage</string>
	<string name="albumBackGround">albumBackGround</string>
	<string name="Click">Click</string>
	<string name="finish">finish</string>    
    </resources>