<?xml version="1.0" encoding="utf-8"?>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="1" >

        <EditText
            android:id="@+id/emailAddress"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="50" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:maxLength="50" />

        <Button
            android:id="@+id/register"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="4"
            android:text="@string/register" />

        <Button
            android:id="@+id/back"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="6"
            android:text="@string/back" />

        <Space
            android:layout_width="1dp"
            android:layout_height="179dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2" />

        <Space
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5" />

    </GridLayout>
